# Hallucination-Detection

./: .gitignore  ADAPTIVE_CONFIG_GUIDE.md  CLAUDE.md  README.md  adaptive_config.py  environment.yml  generate_pipeline.py  hidden_state.py  llm_judge.py  prepare_datasets.py  pyproject.toml  requirements.txt  test_batch.py  test_compile_fa.py  test_final_config.py
baseline_detectors/: config.py  extract_full_hidden_states.py  runner.py
baseline_detectors/data_utils/: accessor.py  cache_utils.py  data_split.py  extract_qa_hidden_states.py  extract_tsv_features.py  generate_icr_cache.py  generate_patch_icr.py  icr_probe.py  icr_score.py  labels.py  llm_layers.py  sampling_manager.py  train_utils.py
baseline_detectors/detectors/: __init__.py  base.py  ccs.py  eigenscore.py  haloscope.py  icr_probe.py  lexical_similarity.py  mind.py  prism.py  registry.py  saplma.py  sar.py  self_evaluator.py  selfcheck_bertscore.py  selfcheck_nli.py  semantic_entropy.py  sep.py  stochastic_utils.py  tsv.py  uncertainty_metrics.py  verbalize.py
baseline_detectors/evaluators/: classification.py
datasets_v1/: HDF5 幻觉特征数据库架构指南.txt  README_SAMPLING.md  SAMPLING_QUICKSTART.md  generate_auxiliary_evals.py  generate_pipeline.py  generate_pipeline1.py  generate_pipeline2.py  generate_pipeline3.py  generate_pipeline4.py  generate_pipeline5.py  generate_pipeline6.py  generate_pipeline7.py  generate_pipeline8.py  generate_pipeline_bele.py  generate_stochastic_samples.py  hdf5_test.py  hidden_state.py  llm_judge.py  prepare_datasets.py  prompt_builder.py  run_sampling_example.sh  test_sampling.py
docs/: index.html
