[project]
name = "hallucination-detection"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "bert-score",
    "datasets",
    "h5py",
    "matplotlib",
    "ml-dtypes",
    "nltk",
    "numpy",
    "openai",
    "pandas",
    "pydantic",
    "python-dotenv",
    "rouge-score",
    "scikit-learn",
    "scipy",
    "sentence-transformers",
    "sentencepiece",
    "tiktoken",
    "torch",
    "torchvision",
    "tqdm",
    "transformers",
]

# PyTorch CUDA index — change cu118 to match your CUDA version (cu121, cu124, etc.)
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]
