[project]
name = "hallucination-detection"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "bert-score",
    "datasets",
    "h5py",
    "matplotlib",
    "ml-dtypes",
    "nltk",
    "numpy",
    "openai",
    "pandas",
    "pydantic",
    "python-dotenv",
    "rouge-score",
    "scikit-learn",
    "scipy",
    "sentence-transformers",
    "sentencepiece",
    "tiktoken",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "tqdm",
    "transformers",
]

# PyTorch CUDA 12.4 index
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]