[project]
name = "hallucination-detection"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    "accelerate",
    "bert-score",
    "datasets",
    "h5py",
    "matplotlib",
    "ml-dtypes",
    "nltk",
    "numpy",
    "openai",
    "pandas",
    "pydantic",
    "python-dotenv",
    "rouge-score",
    "scikit-learn",
    "scipy",
    "sentence-transformers",
    "sentencepiece",
    "tiktoken",
    "torch",
    "tqdm",
    "transformers",
]

# Linux: CUDA 11.8 (project default)
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

# Windows (Blackwell / RTX 50-series): CUDA 12.8 nightly — required for sm_120 kernels
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]